--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -25,7 +25,7 @@ bCookAll=False
 bCookMapsOnly=False
 bCompressed=False
 bSkipEditorContent=False
--MapsToCook=(FilePath=)
-+MapsToCook=(FilePath="../../../../../../Users/name/Desktop/Game Design/Unreal Engine 4/Unreal Projects/VRTest/Content/Maps/VRTestMap_V2.umap")
+-MapsToCook=(FilePath="../../../../../../Users/name/Desktop/Game Design/Unreal Engine 4/Unreal Projects/VRTest/Content/Maps/VRTestMap_V2.umap")
++MapsToCook=(FilePath="../../../../../../Users/name/Desktop/Game Design/Unreal Engine 4/Unreal Projects/RovioGameJam16/Content/Maps/VRTestMap_V3.umap")
 
 
